# poetry_public_namespace

./: pyproject.toml  setup.py
src/namespace/python_test/: __init__.py
src/public_namespace/util/: __init__.py
src/public_namespace/util/csv/: check_csv_for_dupes.py  keep_cols.py  read_csv.py  remove_cols.py  split_csv_row.py  write_data_to_csv.py
src/public_namespace/util/neon/: batchSQLcopyFromPandas.py  batchSQLcopyFromPolars.py  bulk_delete.py
src/public_namespace/util/sql/: check_table_exists.py  copy_from_to_table.py  execute_sql_query.py  format_sql_command.py  is_table_correct.py
src/public_namespace/util/supabase/: batchCopyFromStringIO.py  batchSQLcopy.py  batch_insert.py  bulk_delete.py  bulk_delete2.py  bulk_fetch.py  bulk_insert.py  copyFromStringIO.py  insert.py
