[tool.poetry]
name = "poetry_public_namespace"
version = "0.0.0"
description = ""
packages = [{include = "public_namespace", from = "src"}]
authors = ["Aaron Landers <mrlanderson69@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.11.4"
setuptools = "^69.0.0"


[build-system]
requires = [ "poetry-core", "setuptools" ]
build-backend = "poetry.core.masonry.api"
